--- a/app/src/main/res/layout/activity_paciente.xml
+++ b/app/src/main/res/layout/activity_paciente.xml
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/custon_background"
+            android:elevation="0dp"
             app:tabMode="scrollable"
             app:tabGravity="fill"
             app:tabTextColor="@color/colorLabel" />
