--- a/app/src/main/res/layout/fragment_paciente_tratamento.xml
+++ b/app/src/main/res/layout/fragment_paciente_tratamento.xml
@@ -7,15 +7,104 @@
     android:layout_gravity="center"
     android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Tratamento"
-        android:textSize="30sp"
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/corBackgroung"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <!--    CLAREAMENTO-->
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardTratamentoClareamento"
+        style="@style/Card"
+        android:layout_marginTop="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <CheckBox
+                android:id="@+id/chkClareamento"
+                style="@style/CheckBox"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+
+                android:layout_marginStart="32dp"
+                android:buttonTint="@color/corPrincipal"
+                android:text="Clareamento"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v7.widget.CardView>
+
+    <!--    EXTRAÇÃO-->
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardTratamentoExtracao"
+        style="@style/Card"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardTratamentoClareamento">
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <CheckBox
+                android:id="@+id/chkExtracao"
+                style="@style/CheckBox"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+
+                android:layout_marginStart="32dp"
+                android:buttonTint="@color/corPrincipal"
+                android:text="Extração"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v7.widget.CardView>
+
+    <!--    OBTURAÇÃO-->
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardTratamentoObturacao"
+        style="@style/Card"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardTratamentoExtracao">
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <CheckBox
+                android:id="@+id/chkObturacao"
+                style="@style/CheckBox"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+
+                android:layout_marginStart="32dp"
+                android:buttonTint="@color/corPrincipal"
+                android:text="Obturação"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v7.widget.CardView>
 
 </android.support.constraint.ConstraintLayout>
