--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,11 +43,13 @@
         <item name="textAllCaps">false</item>
     </style>
 
-    <style name="RadioButton">
-        <item name="android:gravity">center</item>
-        <item name="android:layout_gravity">center</item>
+    <style name="SelectionControls">
         <item name="android:buttonTint">@color/corPrincipal</item>
         <item name="android:textColor">@color/corPrincipal</item>
+    </style>
+
+    <style name="RadioButton" parent="SelectionControls">
+        <item name="android:layout_gravity">center</item>
         <item name="android:layout_weight">0.5</item>
     </style>
 
@@ -59,5 +61,20 @@
         <item name="android:text">Não</item>
     </style>
 
+    <style name="Card">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">60dp</item>
+        <item name="android:layout_marginStart">16dp</item>
+        <item name="android:layout_marginEnd">16dp</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="cardCornerRadius">4dp</item>
+        <item name="elevation">0dp</item>
+    </style>
+
+    <style name="CheckBox" parent="SelectionControls">
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:textColor">@color/corPrincipal</item>
+        <item name="android:textSize">16sp</item>
+    </style>
 
 </resources>
