--- a/app/src/main/res/layout/activity_agendamento.xml
+++ b/app/src/main/res/layout/activity_agendamento.xml
@@ -27,11 +27,11 @@
         android:background="@drawable/custom_searchbox"
         android:drawableLeft="@drawable/ic_pesquisa"
         android:drawablePadding="16dp"
-        android:textColor="#ffff"
         android:ems="10"
+        android:hint="Pesquisar paciente"
         android:inputType="text"
         android:padding="8dp"
-        android:text="@string/texto_caixa_pesquisa"
+        android:textColor="#ffff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,8 +44,10 @@
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="@+id/menu_agenda_activity"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtPesquisaPacienteAgendamento"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/custon_background" />
 
     <TextView
@@ -60,7 +62,7 @@
         app:layout_constraintTop_toTopOf="@+id/imageView4" />
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/spinnerPacienteTratamentos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="@+id/imageView4"
@@ -79,7 +81,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerPacienteTratamentos"
         tools:ignore="MissingConstraints" />
 
     <TextView
@@ -93,6 +95,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/calendarView" />
 
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView17"
+        app:srcCompat="@drawable/custon_background" />
+
     <Button
         android:id="@+id/btnSalvarAgendamento"
         style="@style/Button"
@@ -102,6 +114,10 @@
         android:layout_marginBottom="16dp"
         android:text="Salvar"
         app:layout_constraintBottom_toTopOf="@+id/menu_agenda_activity"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView6"
+        app:layout_constraintVertical_bias="1.0" />
 
 </android.support.constraint.ConstraintLayout>
