--- a/app/src/main/res/layout/activity_tratamentos_paciente.xml
+++ b/app/src/main/res/layout/activity_tratamentos_paciente.xml
@@ -15,13 +15,25 @@
         app:layout_constraintVertical_bias="0.0" >
 
         <TextView
-            android:id="@+id/textView22"
+            android:id="@+id/btnMenuOpcoes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:background="#FFFFFF"
             android:clickable="true"
             android:drawableEnd="@drawable/ic_opcoes" />
+
+        <TextView
+            android:id="@+id/txtNomeTratamentoPaciente"
+            style="@style/Label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="16dp"
+            android:text="TextView"
+            android:textColor="@color/corPrincipal"
+            android:textSize="20sp" />
+
     </android.support.v7.widget.CardView>
 
 </android.support.constraint.ConstraintLayout>
