--- a/app/src/main/res/layout/fragment_paciente_consulta.xml
+++ b/app/src/main/res/layout/fragment_paciente_consulta.xml
@@ -19,7 +19,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/btnNovaConsulta"
+        android:id="@+id/btnAgendarNovaConsulta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
