--- a/app/src/main/res/layout/activity_agenda.xml
+++ b/app/src/main/res/layout/activity_agenda.xml
@@ -40,8 +40,9 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/menu_agenda_activity"
-        app:layout_constraintEnd_toEndOf="@id/menu_agenda_activity"
+        android:background="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/menu_navegacao_activity"
+        app:layout_constraintEnd_toEndOf="@id/menu_navegacao_activity"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/CalendarioAgenda"
@@ -58,7 +59,7 @@
         android:layout_marginBottom="16dp"
         android:backgroundTint="@color/corPrincipal"
         android:clickable="true"
-        app:layout_constraintBottom_toTopOf="@+id/menu_agenda_activity"
+        app:layout_constraintBottom_toTopOf="@+id/menu_navegacao_activity"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/imageView3"
@@ -69,11 +70,11 @@
 
     <android.support.design.widget.BottomNavigationView
 
-        android:id="@+id/menu_agenda_activity"
+        android:id="@+id/menu_navegacao_activity"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/corPrincipal"
-        app:itemIconTint="#48A4E4"
+        app:itemIconTint="@color/colorLabel"
         app:labelVisibilityMode="unlabeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
