--- a/app/src/main/res/layout/activity_agenda.xml
+++ b/app/src/main/res/layout/activity_agenda.xml
@@ -38,15 +38,9 @@
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
         android:background="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/menu_navegacao_activity"
-        app:layout_constraintEnd_toEndOf="@id/menu_navegacao_activity"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/CalendarioAgenda"
-        app:layout_constraintVertical_bias="0.0"
         tools:listitem="@layout/activity_info_consulta_marcada">
 
     </ListView>
@@ -59,28 +53,22 @@
         android:layout_marginBottom="16dp"
         android:backgroundTint="@color/corPrincipal"
         android:clickable="true"
-        app:layout_constraintBottom_toTopOf="@+id/menu_navegacao_activity"
+        android:focusable="true"
+        app:layout_constraintBottom_toTopOf="@+id/menuNavegacaoAgenda"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/imageView3"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/ic_action_adicionar"
-        android:focusable="true" />
+        app:srcCompat="@drawable/ic_action_adicionar" />
 
     <android.support.design.widget.BottomNavigationView
-
-        android:id="@+id/menu_navegacao_activity"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@color/corPrincipal"
-        app:itemIconTint="@color/colorLabel"
-        app:labelVisibilityMode="unlabeled"
+        android:id="@+id/menuNavegacaoAgenda"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
         app:menu="@menu/menu_navegacao"/>
 
 </android.support.constraint.ConstraintLayout>
