--- a/app/src/main/res/layout/activity_agenda.xml
+++ b/app/src/main/res/layout/activity_agenda.xml
@@ -14,8 +14,10 @@
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/custon_background" />
 
     <CalendarView
@@ -64,11 +66,13 @@
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/menuNavegacaoAgenda"
+        style="@style/bottomNavigation"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:labelVisibilityMode="unlabeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/menu_navegacao"/>
+        app:menu="@menu/menu_navegacao" />
 
 </android.support.constraint.ConstraintLayout>
