--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -77,4 +77,15 @@
         <item name="android:textSize">20sp</item>
     </style>
 
+    <style name="bottomNavigation">
+        <item name="android:background">@color/corPrincipal</item>
+        <item name="android:layout_height">60dp</item>
+        <item name="itemIconSize">32dp</item>
+        <item name="labelVisibilityMode">unlabeled</item>
+        <item name="itemIconTint">@color/colorLabel</item>
+        <item name="android:state_pressed">true</item>
+        <item name="android:color">#ffffff</item>
+
+    </style>
+
 </resources>
